[project]
name = "backend"
version = "0.1.0"
description = "Before the Honeymoon - Photographer Search API"
requires-python = ">=3.11.1"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "functions-framework",
    "google-adk>=1.5.0",
    "google-cloud-storage>=2.19.0",
    "pillow>=11.2.1",
    "aiofiles>=24.1.0",
    "requests>=2.32.4",
    "python-dotenv>=1.1.0",
    "google-generativeai>=0.8.5",
    "google-cloud-aiplatform>=1.97.0",
    "google-genai>=1.20.0",
    "uuid>=1.30",
    "asyncio>=3.4.3",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "app"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
